@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*froxlor-0.9.5 (19 Apr 2010)
+
+  19 Apr 2010; Froxlor Release Team <release@froxlor.org>
+  -froxlor-0.9.4.ebuild, +froxlor-0.9.5.ebuild:
+  version bump, remove old
+
   16 Apr 2010; Froxlor Release Team <release@froxlor.org>
   froxlor-9999.ebuild:
   support PHP 5.3, this is considered WIP until it hits the portage tree
